--- a/bootstrap-5.3.1-examples/pricing/index.html
+++ b/bootstrap-5.3.1-examples/pricing/index.html
@@ -96,161 +96,110 @@
 
   <div class="container py-3">
     <header>
-      <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
+      <div class="navb d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-          <img class="netflixlogo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/799px-Netflix_2015_logo.svg.png?20190206123158" alt="logo">
+          <img class="netflixlogo"
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/799px-Netflix_2015_logo.svg.png?20190206123158"
+            alt="logo">
         </a>
 
-        <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+        <nav class="sign d-inline-flex mt-2 mt-md-0 ms-md-auto">
           <a class="py-2 link-body-emphasis text-decoration-none" href="#">Sign In</a>
         </nav>
       </div>
-
-      <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-        <h1 class="display-4 fw-normal text-body-emphasis">Pricing</h1>
-        <p class="fs-5 text-body-secondary">Quickly build an effective pricing table for your potential customers with
-          this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.
-        </p>
-      </div>
     </header>
-
-    <main>
-      <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-        <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm">
-            <div class="card-header py-3">
-              <h4 class="my-0 fw-normal">Free</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title pricing-card-title">$0<small class="text-body-secondary fw-light">/mo</small></h1>
-              <ul class="list-unstyled mt-3 mb-4">
-                <li>10 users included</li>
-                <li>2 GB of storage</li>
-                <li>Email support</li>
-                <li>Help center access</li>
-              </ul>
-              <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
-            </div>
-          </div>
+    <section id="precios">
+      <main>
+        <div class="cajas">
+          <div class="colpalida">Standart with ads</div>
+          <div class="colpalida">Standart</div>
+          <div class="collast">Premium</div>
         </div>
-        <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm">
-            <div class="card-header py-3">
-              <h4 class="my-0 fw-normal">Pro</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title pricing-card-title">$15<small class="text-body-secondary fw-light">/mo</small></h1>
-              <ul class="list-unstyled mt-3 mb-4">
-                <li>20 users included</li>
-                <li>10 GB of storage</li>
-                <li>Priority email support</li>
-                <li>Help center access</li>
-              </ul>
-              <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
-            </div>
-          </div>
+
+        <h2 class="display-6 text-center mb-4">Compare plans</h2>
+
+        <div class="table-responsive">
+          <table class="table text-center">
+            <thead>
+              <tr>
+                <th style="width: 34%;"></th>
+                <th style="width: 22%;"></th>
+                <th style="width: 22%;"></th>
+                <th style="width: 22%;"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row" class="text-start">Public</th>
+                <td><svg class="bi" width="24" height="24">
+                    <use xlink:href="#check" />
+                  </svg></td>
+                <td><svg class="bi" width="24" height="24">
+                    <use xlink:href="#check" />
+                  </svg></td>
+                <td><svg class="bi" width="24" height="24">
+                    <use xlink:href="#check" />
+                  </svg></td>
+              </tr>
+              <tr>
+                <th scope="row" class="text-start">Private</th>
+                <td></td>
+                <td><svg class="bi" width="24" height="24">
+                    <use xlink:href="#check" />
+                  </svg></td>
+                <td><svg class="bi" width="24" height="24">
+                    <use xlink:href="#check" />
+                  </svg></td>
+              </tr>
+            </tbody>
+
+            <tbody>
+              <tr>
+                <th scope="row" class="text-start">Permissions</th>
+                <td><svg class="bi" width="24" height="24">
+                    <use xlink:href="#check" />
+                  </svg></td>
+                <td><svg class="bi" width="24" height="24">
+                    <use xlink:href="#check" />
+                  </svg></td>
+                <td><svg class="bi" width="24" height="24">
+                    <use xlink:href="#check" />
+                  </svg></td>
+              </tr>
+              <tr>
+                <th scope="row" class="text-start">Sharing</th>
+                <td></td>
+                <td><svg class="bi" width="24" height="24">
+                    <use xlink:href="#check" />
+                  </svg></td>
+                <td><svg class="bi" width="24" height="24">
+                    <use xlink:href="#check" />
+                  </svg></td>
+              </tr>
+              <tr>
+                <th scope="row" class="text-start">Watch on your TV, computer, mobile phone and tablet</th>
+                <td></td>
+                <td><svg class="bi" width="24" height="24">
+                    <use xlink:href="#check" />
+                  </svg></td>
+                <td><svg class="bi" width="24" height="24">
+                    <use xlink:href="#check" />
+                  </svg></td>
+              </tr>
+              <tr>
+                <th scope="row" class="text-start">Extra security</th>
+                <td></td>
+                <td></td>
+                <td><svg class="bi" width="24" height="24">
+                    <use xlink:href="#check" />
+                  </svg></td>
+              </tr>
+            </tbody>
+          </table>
         </div>
-        <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm border-primary">
-            <div class="card-header py-3 text-bg-primary border-primary">
-              <h4 class="my-0 fw-normal">Enterprise</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title pricing-card-title">$29<small class="text-body-secondary fw-light">/mo</small></h1>
-              <ul class="list-unstyled mt-3 mb-4">
-                <li>30 users included</li>
-                <li>15 GB of storage</li>
-                <li>Phone and email support</li>
-                <li>Help center access</li>
-              </ul>
-              <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
-            </div>
-          </div>
-        </div>
-      </div>
+      </main>
+    </section>
 
-      <h2 class="display-6 text-center mb-4">Compare plans</h2>
-
-      <div class="table-responsive">
-        <table class="table text-center">
-          <thead>
-            <tr>
-              <th style="width: 34%;"></th>
-              <th style="width: 22%;">Free</th>
-              <th style="width: 22%;">Pro</th>
-              <th style="width: 22%;">Enterprise</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row" class="text-start">Public</th>
-              <td><svg class="bi" width="24" height="24">
-                  <use xlink:href="#check" />
-                </svg></td>
-              <td><svg class="bi" width="24" height="24">
-                  <use xlink:href="#check" />
-                </svg></td>
-              <td><svg class="bi" width="24" height="24">
-                  <use xlink:href="#check" />
-                </svg></td>
-            </tr>
-            <tr>
-              <th scope="row" class="text-start">Private</th>
-              <td></td>
-              <td><svg class="bi" width="24" height="24">
-                  <use xlink:href="#check" />
-                </svg></td>
-              <td><svg class="bi" width="24" height="24">
-                  <use xlink:href="#check" />
-                </svg></td>
-            </tr>
-          </tbody>
-
-          <tbody>
-            <tr>
-              <th scope="row" class="text-start">Permissions</th>
-              <td><svg class="bi" width="24" height="24">
-                  <use xlink:href="#check" />
-                </svg></td>
-              <td><svg class="bi" width="24" height="24">
-                  <use xlink:href="#check" />
-                </svg></td>
-              <td><svg class="bi" width="24" height="24">
-                  <use xlink:href="#check" />
-                </svg></td>
-            </tr>
-            <tr>
-              <th scope="row" class="text-start">Sharing</th>
-              <td></td>
-              <td><svg class="bi" width="24" height="24">
-                  <use xlink:href="#check" />
-                </svg></td>
-              <td><svg class="bi" width="24" height="24">
-                  <use xlink:href="#check" />
-                </svg></td>
-            </tr>
-            <tr>
-              <th scope="row" class="text-start">Unlimited members</th>
-              <td></td>
-              <td><svg class="bi" width="24" height="24">
-                  <use xlink:href="#check" />
-                </svg></td>
-              <td><svg class="bi" width="24" height="24">
-                  <use xlink:href="#check" />
-                </svg></td>
-            </tr>
-            <tr>
-              <th scope="row" class="text-start">Extra security</th>
-              <td></td>
-              <td></td>
-              <td><svg class="bi" width="24" height="24">
-                  <use xlink:href="#check" />
-                </svg></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </main>
 
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
       <div class="row">
@@ -290,7 +239,7 @@
       </div>
     </footer>
   </div>
-  
+
 
 </body>
 
