--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card mb-4">
+          <div class="card mb-4 border-danger">
             <div class="card-header py-3 text-bg-danger">
               <h4 class="my-0 fw-normal">Premium</h4>
             </div>
@@ -166,7 +166,7 @@
               <th style="width: 34%;"></th>
               <th style="width: 22%;">Basic</th>
               <th style="width: 22%;">Standart</th>
-              <th style="width: 22%;">Premium</th>
+              <th class="text-danger" style="width: 22%;">Premium</th>
             </tr>
           </thead>
           <tbody>
@@ -174,13 +174,13 @@
               <th scope="row" class="text-start">Monthly price</th>
               <td>$6.99</td>
               <td>$15.49</td>
-              <td>$19.99</td>
+              <td class="text-danger">$19.99</td>
             </tr>
             <tr>
               <th scope="row" class="text-start">Video quality</th>
               <td>Good</td>
               <td>Better</td>
-              <td>Best</td>
+              <td class="text-danger">Best</td>
             </tr>
           </tbody>
 
@@ -189,7 +189,7 @@
               <th scope="row" class="text-start">Resolution</th>
               <td>720p</td>
               <td>1080p</td>
-              <td>4K+HDR</td>
+              <td class="text-danger">4K+HDR</td>
             </tr>
             <tr>
               <th scope="row" class="text-start">Watch on your TV, computer, mobile phone and tablet</th>
@@ -199,7 +199,7 @@
               <td><svg class="bi" width="24" height="24">
                   <use xlink:href="#check" />
                 </svg></td>
-              <td><svg class="bi" width="24" height="24">
+              <td><svg class="bi text-danger" width="24" height="24">
                   <use xlink:href="#check" />
                 </svg></td>
             </tr>
@@ -212,47 +212,24 @@
           </div>
       </div>
     </main>
-
-    <footer class="pt-4 my-md-5 pt-md-5 border-top">
-      <div class="row">
-        <div class="col-12 col-md">
-          <img class="mb-2" src="../assets/brand/bootstrap-logo.svg" alt="" width="24" height="19">
-          <small class="d-block mb-3 text-body-secondary">&copy; Campuslands 2023 Bucaramanga</small>
-        </div>
-        <div class="col-6 col-md">
-          <h5>Features</h5>
-          <ul class="list-unstyled text-small">
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Cool stuff</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Random feature</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Team feature</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Stuff for developers</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Another one</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Last time</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-md">
-          <h5>Resources</h5>
-          <ul class="list-unstyled text-small">
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Resource</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Resource name</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Another resource</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Final resource</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-md">
-          <h5>About</h5>
-          <ul class="list-unstyled text-small">
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Team</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Locations</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Privacy</a></li>
-            <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Terms</a></li>
-          </ul>
-        </div>
-      </div>
-    </footer>
   </div>
-
-
+  <footer class="pt-4 my-md-5 pt-md-5 px-5 border-top">
+    <p>Questions? Call 01 800 917 1563</p>
+    <div class="d-flex flex-wrap ps-0 gap-3">
+      <ul class="ps-0">
+        <p><a class="text-decoration-none text-dark" href="#">FAQ<ap></ap></p>
+        <p><a class="text-decoration-none text-dark" href="#">Privacy<ap></ap></p>
+      </ul>
+      <ul>
+        <p><a class="text-decoration-none text-dark" href="#">Help Center</a></p>
+        <p><a class="text-decoration-none text-dark" href="#">Cookie Preferences</a></p>
+      </ul>
+      <ul>
+        <p><a class="text-decoration-none text-dark" href="#">Netflix Shop</a></p>
+        <p><a class="text-decoration-none text-dark" href="#">Corporate Information</a></p>
+      </ul>
+      <p><a class="text-decoration-none text-dark" href="#">Terms of Use</a></p>
+    </div>
+  </footer>
 </body>
-
 </html>
