header js json api

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="pricing.css" rel="stylesheet">
   <script src="assets/dist/js/bootstrap.bundle.min.js" defer></script>
+  <script src="main.js" defer></script>
 </head>
 
 <body>
@@ -104,21 +105,7 @@
     </div>
   </nav>
   <div class="container py-3">
-    <header>
-      <div class="pricing-header py-3 pb-md text-start">
-        <h1 class="fs-6 fw-normal text-body-emphasis">STEP 1 OF 3</h1>
-        <p class="fs-2 fw-bold">Choose the plan that’s right for you
-        </p>
-        <p class="d-flex align-items-center fw-semibold"><svg class="bi text-danger" width="24" height="24">
-            <use xlink:href="#check" />
-          </svg>&ensp;Watch all you want. Ad-free.</p>
-        <p class="d-flex align-items-center fw-semibold"><svg class="bi text-danger fw-bold" width="24" height="24">
-            <use xlink:href="#check" />
-          </svg>&ensp;Recommendations just for you.</p>
-        <p class="d-flex align-items-center fw-semibold"><svg class="bi text-danger fw-bold" width="24" height="24">
-            <use xlink:href="#check" />
-          </svg>&ensp;Change or cancel your plan anytime.</p>
-      </div>
+    <header id="encabezado">
     </header>
     <main>
       <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
