--- a/index.html
+++ b/index.html
@@ -100,40 +100,8 @@
     <header id="encabezado">
     </header>
     <main>
-      <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-        <div class="col">
-          <div class="card mb-4 rounded-3">
-            <div class="card-header py-3">
-              <h4 class="my-0 fw-normal">Basic</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title pricing-card-title">$6.99<small class="text-body-secondary fw-light">/mo</small>
-              </h1>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card mb-4 rounded-3">
-            <div class="card-header py-3">
-              <h4 class="my-0 fw-normal">Standart</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title pricing-card-title">$15.49<small class="text-body-secondary fw-light">/mo</small>
-              </h1>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card mb-4 border-danger">
-            <div class="card-header py-3 text-bg-danger">
-              <h4 class="my-0 fw-normal">Premium</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title pricing-card-title">$19.99<small class="text-body-secondary fw-light">/mo</small>
-              </h1>
-            </div>
-          </div>
-        </div>
+      <div id="card" class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+        
       </div>
 
       <h2 class="display-6 text-center mb-4">Compare plans</h2>
