footer js json api

--- a/index.html
+++ b/index.html
@@ -105,34 +105,13 @@
 
       
 
-      <div class="table-responsive">
+      <div id="prefooter" class="table-responsive">
         <table id="table" class="table text-center">
         </table>
-        <p class="fs-6">HD (720p), Full HD (1080p), Ultra HD (4K) and HDR availability subject to your internet service and device capabilities. Not all content is available in all resolutions. See our <a href="https://help.netflix.com/legal/termsofuse">Terms of Use</a> for more details.
-          Only people who live with you may use your account. Watch on 4 different devices at the same time with Premium, 2 with Standard and 1 with Basic.</p>
-          <div class="d-grid gap-2 col-6 mx-auto">
-            <button class="btn btn-danger py-3 fs-4" type="button">Next</button>
-          </div>
       </div>
     </main>
   </div>
-  <footer class="pt-4 my-md-5 pt-md-5 px-5 border-top">
-    <p>Questions? Call 01 800 917 1563</p>
-    <div class="d-flex flex-wrap ps-0 gap-3">
-      <ul class="ps-0">
-        <p><a class="text-decoration-none text-dark" href="#">FAQ<ap></ap></p>
-        <p><a class="text-decoration-none text-dark" href="#">Privacy<ap></ap></p>
-      </ul>
-      <ul>
-        <p><a class="text-decoration-none text-dark" href="#">Help Center</a></p>
-        <p><a class="text-decoration-none text-dark" href="#">Cookie Preferences</a></p>
-      </ul>
-      <ul>
-        <p><a class="text-decoration-none text-dark" href="#">Netflix Shop</a></p>
-        <p><a class="text-decoration-none text-dark" href="#">Corporate Information</a></p>
-      </ul>
-      <p><a class="text-decoration-none text-dark" href="#">Terms of Use</a></p>
-    </div>
+  <footer id="footer" class="pt-4 my-md-5 pt-md-5 px-5 border-top">
   </footer>
 </body>
 </html>
