--- a/index.html
+++ b/index.html
@@ -85,8 +85,6 @@
       </li>
     </ul>
   </div>
-
-
   <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
     <symbol id="check" viewBox="0 0 16 16">
       <title>Check</title>
@@ -100,11 +98,9 @@
     <header id="encabezado">
     </header>
     <main>
+      <h2 class="display-6 text-center mb-4">Compare plans</h2>
       <div id="card" class="row row-cols-1 row-cols-md-3 mb-3 text-center">
       </div>
-
-      
-
       <div id="prefooter" class="table-responsive">
         <table id="table" class="table text-center">
         </table>
